--- a/index.html
+++ b/index.html
@@ -1,1 +1,99 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  		<title>Carrey(Hongru) Wang, The Chinese University of Hong Kong</title>
+
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/fontAwesome.css">
+        <link rel="stylesheet" href="css/light-box.css">
+        <link rel="stylesheet" href="css/templatemo-style.css">
+
+        <link href="https://fonts.googleapis.com/css?family=Kanit:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+
+        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    </head>
+
+<body>
+
+    <nav>
+        <div class="logo">
+            <a href="index.html">Carrey(Hongru) Wang</a>
+        </div>
+    </nav>
+
+    <div id="video-container">
+        <div class="video-overlay"></div>
+        <div class="video-content">
+            <div class="inner">
+              <h1>Welcome to <em>My World</em></h1>
+              <p>Please click to see my <a href="CV_eng.pdf" rel="nofollow">CV</a></p>
+              <p><a href="https://github.com/ruleGreen">https://github.com/ruleGreen</a></p>
+              <p>Msc Candidate</p>
+              <p>Dept. of Computer Science and Engineering</p>
+              <p>The Chinese University of Hong Kong</p> 
+            </div>
+        </div>
+        <video autoplay loop muted>
+        	<source src="highway-loop.mp4" type="video/mp4" />
+        </video>
+    </div>
+
+    <div style="padding-bottom:80px;padding-top:100px;">
+        <div style="padding-left:25%;padding-right:25%;">
+            <h3>About me</h3>
+            <div style="padding-top:50px;">I am a final year student at Communication University of China and I received an offer given by CSE of CUHK. My research interest contains quantitative investment, machine learning, data analysis and visulization.</div>
+        </div>
+        <div style="padding-left:25%;padding-top:15%;padding-right:25%;">
+            <h3>Selected publications & Patents</h3>
+
+            <div style="padding-top:50px;">
+            <p>
+                <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8367682">Anti-Crawler strategy and distributed crawler based on Hadoop</a>
+            </p>
+            <p>HongRu Wang; ChunFang Li; LingFei Zhang; MinYong Shi</p>
+            <p>2018 IEEE 3rd International Conference on Big Data Analysis (ICBDA)</p>
+            </div>
+
+            <div style="padding-top:20px;">
+            <p>
+                <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8526946">Research On Face Image Clustering Based On Integrating Som And Spectral Clustering Algorithm</a>
+            </p>
+            <p>Ling-Fei Zhang; Chun-Fang Li; Hong-Ru Wang; Min-Yong Shi</p>
+            <p>2018 International Conference on Machine Learning and Cybernetics (ICMLC)</p>
+            </div>
+
+            <div style="padding-top:20px;">
+            <p>
+                <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8466419">Image Segmentation Algorithms Based on Convolutional Neural Networks</a>
+            </p>
+            <p>Zeheng Zhou; Hongru Wang; Wenqian Shang; Lingfei Zhang</p>
+            <p>2018 IEEE/ACIS 17th International Conference on Computer and Information Science (ICIS)</p>
+            </div>
+
+            <div style="padding-top:20px;">
+            <p>
+                A computer software copyright of "WeCampus WeChat mini-program" was awarded (2018SR562540)
+            </p>
+            </div>
+
+        </div>
+    </div>
+
+    <script src="https://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+    <script src="js/vendor/bootstrap.min.js"></script>
+    
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+
+    
+</body>
+</html>
