--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="video-content">
             <div class="inner">
               <h1>Welcome to <em>My World</em></h1>
-              <p>Please click to see my <a href="CV_eng.pdf" rel="nofollow">CV</a></p>
+              <p>Please click to see my <a href="Wang Hongru_CV" rel="nofollow">CV</a></p>
               <p><a href="https://github.com/ruleGreen">https://github.com/ruleGreen</a></p>
-              <p>Msc Candidate</p>
+              <p>MSc in Computer Science</p>
               <p>Dept. of Computer Science and Engineering</p>
               <p>The Chinese University of Hong Kong</p> 
             </div>
@@ -48,7 +48,7 @@
     <div style="padding-bottom:80px;padding-top:100px;">
         <div style="padding-left:25%;padding-right:25%;">
             <h3>About me</h3>
-            <div style="padding-top:50px;">I am a final year student at Communication University of China and I received an offer given by CSE of CUHK. My research interest contains quantitative investment, machine learning, data analysis and visulization.</div>
+            <div style="padding-top:50px;">I am a MSc student at The Chinese University of Hong Kong. My research interest contains machine learning, natural language processing and financial engieering.</div>
         </div>
         <div style="padding-left:25%;padding-top:15%;padding-right:25%;">
             <h3>Selected publications & Patents</h3>
@@ -67,14 +67,6 @@
             </p>
             <p>Ling-Fei Zhang; Chun-Fang Li; Hong-Ru Wang; Min-Yong Shi</p>
             <p>2018 International Conference on Machine Learning and Cybernetics (ICMLC)</p>
-            </div>
-
-            <div style="padding-top:20px;">
-            <p>
-                <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8466419">Image Segmentation Algorithms Based on Convolutional Neural Networks</a>
-            </p>
-            <p>Zeheng Zhou; Hongru Wang; Wenqian Shang; Lingfei Zhang</p>
-            <p>2018 IEEE/ACIS 17th International Conference on Computer and Information Science (ICIS)</p>
             </div>
 
             <div style="padding-top:20px;">
