--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="video-content">
             <div class="inner">
               <h1>Welcome to <em>My World</em></h1>
-              <p>Please click to see my <a href="Wang Hongru_CV" rel="nofollow">CV</a></p>
+              <p>Please click to see my <a href="WangHongru_CV.pdf" rel="nofollow">CV</a></p>
               <p><a href="https://github.com/ruleGreen">https://github.com/ruleGreen</a></p>
               <p>MSc in Computer Science</p>
               <p>Dept. of Computer Science and Engineering</p>
