--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -1290,7 +1290,7 @@
     }
 
     Cookies.set('data', data);
-    const liaData = JSON.parse(Cookies.get('data'));
+    const liaData = Cookies.get('data');
     console.log(liaData);
   </script>
   <script nomodule defer src="js/js.cookie.js"></script>
