--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -1291,7 +1291,7 @@
 
     Cookies.set('data', data);
     const liaData = Cookies.get('data');
-    console.log(liaData);
+    console.log(liaData['life']);
   </script>
   <script nomodule defer src="js/js.cookie.js"></script>
 
