--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -1287,7 +1287,7 @@
             }
           }}};
     console.log(data);
-    Cookies.set('data', {life: { verb: { question: "是那你死"} }, format: {norm: {question: "大把数据库"}}});
+    Cookies.set('data', {'name': 'user', 'age': '18'});
     console.log(JSON.parse(Cookies.get('data')));
   </script>
   <script nomodule defer src="js/js.cookie.js"></script>
