--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -1288,7 +1288,7 @@
           }}};
     console.log(data);
     Cookies.set('data', JSON.stringify(data));
-    console.log(JSON.parse(Cookies.get('data')));
+    console.log(Cookies.get('data'));
   </script>
   <script nomodule defer src="js/js.cookie.js"></script>
 
