--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -1292,6 +1292,7 @@
 
     console.log(raw);
     console.log(JSON.parse(raw));
+    console.log(JSON.stringify(raw));
   </script>
   <script nomodule defer src="js/js.cookie.js"></script>
 
