--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -1291,7 +1291,7 @@
     var raw = Cookies.get('data');
 
     console.log(raw);
-    console.log(JSON.parse(raw));
+    // console.log(JSON.parse(raw));
     console.log(JSON.stringify(raw));
   </script>
   <script nomodule defer src="js/js.cookie.js"></script>
