--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -1287,7 +1287,7 @@
             }
           }}};
     console.log(data);
-    Cookies.set('data', JSON.stringify(data));
+    Cookies.set('data', data);
     var raw = Cookies.get('data');
 
     console.log(raw);
