--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- JS-Cookie -->
-  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script src="./js/js.cookie.js"></script>
   <script type="module">
+    import Cookies from './js/js.cookie.js'
+    
     var answer = 1;
     Cookies.set('answer', "1");
     console.log(Cookies.get('answer'));
