--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head>
   <!-- Required meta tags -->
@@ -7,7 +8,7 @@
   <!-- JS-Cookie -->
   <script src="./js/js.cookie.js"></script>
   <script type="module">
-    import Cookies from './js/js.cookie.js'
+    import * as Cookies from './js/js.cookie.js'
 
     var answer = 1;
     Cookies.set('answer', "1");
