--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- JS-Cookie -->
-  <script src="./js/js.cookie.js"></script>
+  <script type="module" src="./js/js.cookie.mjs"></script>
   <script type="module">
-    import Cookies from './js/js.cookie.js';
+    import Cookies from './js/js.cookie.mjs';
 
     var answer = 1;
     Cookies.set('answer', "1");
@@ -1301,6 +1301,7 @@
     console.log(Cookies.getJSON('data'));
     */
   </script>
+  <script nomodule defer src="./js/js.cookie.js"></script>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
