--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -8,7 +8,7 @@
   <!-- JS-Cookie -->
   <script type="module" src="./js/js.cookie.mjs"></script>
   <script type="module">
-    import Cookies from './js/js.cookie.mjs';
+    import Cookies from './js/js.cookie.js';
 
     var answer = 1;
     Cookies.set('answer', "1");
