--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -7,9 +7,9 @@
 
   <!-- JS-Cookie -->
   <script type="module" src="./js/js.cookie.mjs"></script>
-  <script nomodule defer src="./js/js.cookie.js"></script>
+  <script src="./js/js.cookie.js"></script>
   <script>
-    //import Cookies from './js/js.cookie.js';
+    import Cookies from './js/js.cookie.js';
 
     var answer = 1;
     Cookies.set('answer', "1");
