--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -8,7 +8,7 @@
   <!-- JS-Cookie -->
   <script type="module" src="./js/js.cookie.mjs"></script>
   <script src="./js/js.cookie.js"></script>
-  <script>
+  <script type="module" src="./js/js.cookie.js">
     import Cookies from './js/js.cookie.js';
 
     var answer = 1;
