--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -8,8 +8,8 @@
   <!-- JS-Cookie -->
   <script type="module" src="./js/js.cookie.mjs"></script>
   <script src="./js/js.cookie.js"></script>
-  <script type="module" src="./js/js.cookie.js">
-    import Cookies from './js/js.cookie.js';
+  <script type="module">
+    import Cookies from './js/js.cookie.js'
 
     var answer = 1;
     Cookies.set('answer', "1");
