--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -1315,6 +1315,413 @@
     Cookies.set('question', question);
     console.log(Cookies.get('question'));
     console.log(JSON.parse(Cookies.get('question')));
+
+    const life = { "life": {
+              "typeName": "生活",
+              "subTypes": {
+                "verb": {
+                  "typeName": "動詞",
+                  "mission": {
+                    1: {
+                      "questions": {
+                        0: {
+                          "questionName": "題目一",
+                          "content": "這個網站被黑客攻激，完全看不到畫面的內容了。",
+                          "correct": "擊",
+                          "errIndex": 8
+                        },
+                        1: {
+                          "questionName": "題目二",
+                          "content": "現代科技的發展日新月義，不斷進步。",
+                          "correct": "異",
+                          "errIndex": 10
+                        },
+                        2: {
+                          "questionName": "題目三",
+                          "content": "這個週末，我們全家去度假村泡溫泉。",
+                          "correct": "渡",
+                          "errIndex": 10
+                        },
+                        3: {
+                          "questionName": "題目四",
+                          "content": "你大吵大鬧影響了別人做生意，必須要陪償他們的損失。",
+                          "correct": "賠",
+                          "errIndex": 17
+                        },
+                        4: {
+                          "questionName": "題目五",
+                          "content": "地震催毀了這個曾經非常繁華的城市。",
+                          "correct": "嗺",
+                          "errIndex": 2
+                        },
+                        5: {
+                          "questionName": "題目六",
+                          "content": "這家人的關係非常溶洽，家裏常常充滿歡聲笑語。",
+                          "correct": "融",
+                          "errIndex": 8
+                        },
+                        6: {
+                          "questionName": "題目七",
+                          "content": "美玲偷懶不溫習功課，結果考試不合格，真是得不嘗失啊！",
+                          "correct": "償",
+                          "errIndex": 22
+                        },
+                        7: {
+                          "questionName": "題目八",
+                          "content": "爺爺的農莊裏有一些小胡蘆，我常用它們來裝水。",
+                          "correct": "葫",
+                          "errIndex": 10
+                        },
+                        8: {
+                          "questionName": "題目九",
+                          "content": "雖然他沒贏得比賽，但爸爸一如繼往地支持他練習玩魔術。",
+                          "correct": "既",
+                          "errIndex": 14
+                        },
+                        9: {
+                          "questionName": "題目十",
+                          "content": "這個演員經常出現在電視螢幕上，深受觀眾的歡迎。",
+                          "correct": "熒",
+                          "errIndex": 11
+                        }
+                      }
+                    },
+                    2: {
+                      "questions": {
+                        0: {
+                          "questionName": "題目一",
+                          "content": "這個網站被黑客攻激，完全看不到畫面的內容了。",
+                          "correct": "擊",
+                          "errIndex": 8
+                        },
+                        1: {
+                          "questionName": "題目二",
+                          "content": "現代科技的發展日新月義，不斷進步。",
+                          "correct": "異",
+                          "errIndex": 10
+                        },
+                        2: {
+                          "questionName": "題目三",
+                          "content": "這個週末，我們全家去度假村泡溫泉。",
+                          "correct": "渡",
+                          "errIndex": 10
+                        },
+                        3: {
+                          "questionName": "題目四",
+                          "content": "你大吵大鬧影響了別人做生意，必須要陪償他們的損失。",
+                          "correct": "賠",
+                          "errIndex": 17
+                        },
+                        4: {
+                          "questionName": "題目五",
+                          "content": "地震催毀了這個曾經非常繁華的城市。",
+                          "correct": "嗺",
+                          "errIndex": 2
+                        },
+                        5: {
+                          "questionName": "題目六",
+                          "content": "這家人的關係非常溶洽，家裏常常充滿歡聲笑語。",
+                          "correct": "融",
+                          "errIndex": 8
+                        },
+                        6: {
+                          "questionName": "題目七",
+                          "content": "美玲偷懶不溫習功課，結果考試不合格，真是得不嘗失啊！",
+                          "correct": "償",
+                          "errIndex": 22
+                        },
+                        7: {
+                          "questionName": "題目八",
+                          "content": "爺爺的農莊裏有一些小胡蘆，我常用它們來裝水。",
+                          "correct": "葫",
+                          "errIndex": 10
+                        },
+                        8: {
+                          "questionName": "題目九",
+                          "content": "雖然他沒贏得比賽，但爸爸一如繼往地支持他練習玩魔術。",
+                          "correct": "既",
+                          "errIndex": 14
+                        },
+                        9: {
+                          "questionName": "題目十",
+                          "content": "這個演員經常出現在電視螢幕上，深受觀眾的歡迎。",
+                          "correct": "熒",
+                          "errIndex": 11
+                        }
+                      }
+                    },
+                    3: {
+                      "questions": {
+                        0: {
+                          "questionName": "題目一",
+                          "content": "這個網站被黑客攻激，完全看不到畫面的內容了。",
+                          "correct": "擊",
+                          "errIndex": 8
+                        },
+                        1: {
+                          "questionName": "題目二",
+                          "content": "現代科技的發展日新月義，不斷進步。",
+                          "correct": "異",
+                          "errIndex": 10
+                        },
+                        2: {
+                          "questionName": "題目三",
+                          "content": "這個週末，我們全家去度假村泡溫泉。",
+                          "correct": "渡",
+                          "errIndex": 10
+                        },
+                        3: {
+                          "questionName": "題目四",
+                          "content": "你大吵大鬧影響了別人做生意，必須要陪償他們的損失。",
+                          "correct": "賠",
+                          "errIndex": 17
+                        },
+                        4: {
+                          "questionName": "題目五",
+                          "content": "地震催毀了這個曾經非常繁華的城市。",
+                          "correct": "嗺",
+                          "errIndex": 2
+                        },
+                        5: {
+                          "questionName": "題目六",
+                          "content": "這家人的關係非常溶洽，家裏常常充滿歡聲笑語。",
+                          "correct": "融",
+                          "errIndex": 8
+                        },
+                        6: {
+                          "questionName": "題目七",
+                          "content": "美玲偷懶不溫習功課，結果考試不合格，真是得不嘗失啊！",
+                          "correct": "償",
+                          "errIndex": 22
+                        },
+                        7: {
+                          "questionName": "題目八",
+                          "content": "爺爺的農莊裏有一些小胡蘆，我常用它們來裝水。",
+                          "correct": "葫",
+                          "errIndex": 10
+                        },
+                        8: {
+                          "questionName": "題目九",
+                          "content": "雖然他沒贏得比賽，但爸爸一如繼往地支持他練習玩魔術。",
+                          "correct": "既",
+                          "errIndex": 14
+                        },
+                        9: {
+                          "questionName": "題目十",
+                          "content": "這個演員經常出現在電視螢幕上，深受觀眾的歡迎。",
+                          "correct": "熒",
+                          "errIndex": 11
+                        }
+                      }
+                    }
+                  }
+                },
+                "norm": {
+                  "typeName": "名詞",
+                  "mission": {
+                    1: {
+                      "questions": {
+                        0: {
+                          "questionName": "題目一",
+                          "content": "這個網站被黑客攻激，完全看不到畫面的內容了。",
+                          "correct": "擊",
+                          "errIndex": 8
+                        },
+                        1: {
+                          "questionName": "題目二",
+                          "content": "現代科技的發展日新月義，不斷進步。",
+                          "correct": "異",
+                          "errIndex": 10
+                        },
+                        2: {
+                          "questionName": "題目三",
+                          "content": "這個週末，我們全家去度假村泡溫泉。",
+                          "correct": "渡",
+                          "errIndex": 10
+                        },
+                        3: {
+                          "questionName": "題目四",
+                          "content": "你大吵大鬧影響了別人做生意，必須要陪償他們的損失。",
+                          "correct": "賠",
+                          "errIndex": 17
+                        },
+                        4: {
+                          "questionName": "題目五",
+                          "content": "地震催毀了這個曾經非常繁華的城市。",
+                          "correct": "嗺",
+                          "errIndex": 2
+                        },
+                        5: {
+                          "questionName": "題目六",
+                          "content": "這家人的關係非常溶洽，家裏常常充滿歡聲笑語。",
+                          "correct": "融",
+                          "errIndex": 8
+                        },
+                        6: {
+                          "questionName": "題目七",
+                          "content": "美玲偷懶不溫習功課，結果考試不合格，真是得不嘗失啊！",
+                          "correct": "償",
+                          "errIndex": 22
+                        },
+                        7: {
+                          "questionName": "題目八",
+                          "content": "爺爺的農莊裏有一些小胡蘆，我常用它們來裝水。",
+                          "correct": "葫",
+                          "errIndex": 10
+                        },
+                        8: {
+                          "questionName": "題目九",
+                          "content": "雖然他沒贏得比賽，但爸爸一如繼往地支持他練習玩魔術。",
+                          "correct": "既",
+                          "errIndex": 14
+                        },
+                        9: {
+                          "questionName": "題目十",
+                          "content": "這個演員經常出現在電視螢幕上，深受觀眾的歡迎。",
+                          "correct": "熒",
+                          "errIndex": 11
+                        }
+                      }
+                    },
+                    2: {
+                      "questions": {
+                        0: {
+                          "questionName": "題目一",
+                          "content": "這個網站被黑客攻激，完全看不到畫面的內容了。",
+                          "correct": "擊",
+                          "errIndex": 8
+                        },
+                        1: {
+                          "questionName": "題目二",
+                          "content": "現代科技的發展日新月義，不斷進步。",
+                          "correct": "異",
+                          "errIndex": 10
+                        },
+                        2: {
+                          "questionName": "題目三",
+                          "content": "這個週末，我們全家去度假村泡溫泉。",
+                          "correct": "渡",
+                          "errIndex": 10
+                        },
+                        3: {
+                          "questionName": "題目四",
+                          "content": "你大吵大鬧影響了別人做生意，必須要陪償他們的損失。",
+                          "correct": "賠",
+                          "errIndex": 17
+                        },
+                        4: {
+                          "questionName": "題目五",
+                          "content": "地震催毀了這個曾經非常繁華的城市。",
+                          "correct": "嗺",
+                          "errIndex": 2
+                        },
+                        5: {
+                          "questionName": "題目六",
+                          "content": "這家人的關係非常溶洽，家裏常常充滿歡聲笑語。",
+                          "correct": "融",
+                          "errIndex": 8
+                        },
+                        6: {
+                          "questionName": "題目七",
+                          "content": "美玲偷懶不溫習功課，結果考試不合格，真是得不嘗失啊！",
+                          "correct": "償",
+                          "errIndex": 22
+                        },
+                        7: {
+                          "questionName": "題目八",
+                          "content": "爺爺的農莊裏有一些小胡蘆，我常用它們來裝水。",
+                          "correct": "葫",
+                          "errIndex": 10
+                        },
+                        8: {
+                          "questionName": "題目九",
+                          "content": "雖然他沒贏得比賽，但爸爸一如繼往地支持他練習玩魔術。",
+                          "correct": "既",
+                          "errIndex": 14
+                        },
+                        9: {
+                          "questionName": "題目十",
+                          "content": "這個演員經常出現在電視螢幕上，深受觀眾的歡迎。",
+                          "correct": "熒",
+                          "errIndex": 11
+                        }
+                      }
+                    }
+                  }
+                },
+                "adj": {
+                  "typeName": "形容詞",
+                  "mission": {
+                    1: {
+                      "questions": {
+                        0: {
+                          "questionName": "題目一",
+                          "content": "這個網站被黑客攻激，完全看不到畫面的內容了。",
+                          "correct": "擊",
+                          "errIndex": 8
+                        },
+                        1: {
+                          "questionName": "題目二",
+                          "content": "現代科技的發展日新月義，不斷進步。",
+                          "correct": "異",
+                          "errIndex": 10
+                        },
+                        2: {
+                          "questionName": "題目三",
+                          "content": "這個週末，我們全家去度假村泡溫泉。",
+                          "correct": "渡",
+                          "errIndex": 10
+                        },
+                        3: {
+                          "questionName": "題目四",
+                          "content": "你大吵大鬧影響了別人做生意，必須要陪償他們的損失。",
+                          "correct": "賠",
+                          "errIndex": 17
+                        },
+                        4: {
+                          "questionName": "題目五",
+                          "content": "地震催毀了這個曾經非常繁華的城市。",
+                          "correct": "嗺",
+                          "errIndex": 2
+                        },
+                        5: {
+                          "questionName": "題目六",
+                          "content": "這家人的關係非常溶洽，家裏常常充滿歡聲笑語。",
+                          "correct": "融",
+                          "errIndex": 8
+                        },
+                        6: {
+                          "questionName": "題目七",
+                          "content": "美玲偷懶不溫習功課，結果考試不合格，真是得不嘗失啊！",
+                          "correct": "償",
+                          "errIndex": 22
+                        },
+                        7: {
+                          "questionName": "題目八",
+                          "content": "爺爺的農莊裏有一些小胡蘆，我常用它們來裝水。",
+                          "correct": "葫",
+                          "errIndex": 10
+                        },
+                        8: {
+                          "questionName": "題目九",
+                          "content": "雖然他沒贏得比賽，但爸爸一如繼往地支持他練習玩魔術。",
+                          "correct": "既",
+                          "errIndex": 14
+                        },
+                        9: {
+                          "questionName": "題目十",
+                          "content": "這個演員經常出現在電視螢幕上，深受觀眾的歡迎。",
+                          "correct": "熒",
+                          "errIndex": 11
+                        }
+                      }
+                    }
+                  }
+                }
+              }} }
+    Cookies.set('life', life);
+    console.log(Cookies.get('life'));
+    console.log(Cookies.getJSON('life'));
   </script>
 
   <!-- Bootstrap CSS -->
