--- a/errCorrect/start.html
+++ b/errCorrect/start.html
@@ -25,7 +25,7 @@
       }
       .board{
         margin-top: 20vh;
-        width: 70%;
+        width: 65%;
         height: 60%;
       }
 
@@ -34,6 +34,8 @@
       }
 
       .title-board{
+        /*min-width: 200px;*/
+        max-width: 250px;
         background-color: rgba(240, 220, 183, 0.9);
         color: rgba(86, 75, 68, 1);
         border-top-left-radius: .7rem!important;
@@ -57,6 +59,8 @@
         top:12%;
       }
       .sub-title-board{
+        min-width: 190px;
+        max-width: 250px;
         background-color: rgba(111, 104, 109, 0.9);
 
         border-bottom:10px solid rgba(111, 104, 109, 0);
@@ -71,6 +75,7 @@
       }
 
       .task-card{
+
         background-color: rgba(255, 255, 255, 1);
         border:10px solid rgba(255, 255, 255, 0);
         border-radius:2.5rem!important;
@@ -79,10 +84,10 @@
         transition: all 0.6s;
       }
 
-      .task-card:hover{
-        transform: scale(1.08);
-        cursor:pointer;
-      }
+      /*.task-card:hover{*/
+      /*  transform: scale(1.08);*/
+      /*  cursor:pointer;*/
+      /*}*/
 
       .line{
         height: 1px;
@@ -99,14 +104,28 @@
         display: inline-block;
         vertical-align:middle;
         font-size: 1.3em;
+        margin: 5px;
+
+        transition: all 0.6s;
+
+      }
+
+      .missionDone{
+        background-color: #8dc63f;
+
+      }
+
+      .button1:hover{
+        transform: scale(1.2);
+        cursor:pointer;
       }
 
       .sub-title-text{
         font-size: 1.5em;
       }
       .sub-title-task{
-        font-size: 1.1em;
-        padding: 6px;
+        font-size: 50%;
+        padding: 2px;
         color: rgba(74, 54, 44, 1);
       }
 
@@ -115,188 +134,70 @@
   </head>
   <body>
 
-    <div class="container board">
-      <div class="row sub-board" id="type-lidnPO">
+    <div class="container board"></div>
 
-        <div class="col-lg-2 title-board">
-          <p class="title-text">生活</p>
-          <div class="gift-icon">
-            <img src="img/gift.png" width="55" height="50">
-          </div>
-        </div>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-        <div class="col-lg sub-title-board">
-          <div class="task-card" id="subType-zGqDtC">
-            <p class="sub-title-text">動詞</p>
-            <p>
-              <div class="line"></div>
-              <span class="sub-title-task">任務</span>
-              <div class="line"></div>
-            </p>
-            <div>
-              <div class="button1 rounded-circle"><span>1</span></div>
-            </div>
-          </div>
+  <script src="data/data.js"></script>
 
-        </div>
-        <div class="col-lg sub-title-board">
-          <div class="task-card" id="subType-Jf73LG">
-            <p class="sub-title-text">名詞</p>
-            <p>
-              <div class="line"></div>
-              <span class="sub-title-task">任務</span>
-              <div class="line"></div>
-            </p>
-            <div>
-              <div class="button1 rounded-circle">1</div>
-            </div>
-          </div>
+  <script>
 
-        </div>
-        <div class="col-lg sub-title-board sub-title-end">
-          <div class="task-card"  id="subType-CRiuex">
-            <p class="sub-title-text">形容詞</p>
-            <p>
-              <div class="line"></div>
-              <span class="sub-title-task">任務</span>
-              <div class="line"></div>
-            </p>
-            <div>
-              <div class="button1 rounded-circle">1</div>
-            </div>
-          </div>
-        </div>
+    $('.container').on('click','.button1', function(){
+        let typeId = $(this).closest('.sub-board').attr('id');
+        let subTypeId = $(this).closest('.task-card').attr('id');
+        let missionId = $(this).find('span').text();
+        console.log(typeId, subTypeId, missionId);
 
-      </div>
+        window.location.href="zone-answer.html?type="+typeId+"&subtype="+ subTypeId+"&mission="+ missionId;
+    });
 
-      <div class="row sub-board" id="type-7i52OX" >
+    var boardDiv = $('.board');
+    for(let typeid in data){
+        console.log(typeid);
+      var rowDiv = $('<div class="row sub-board" id="'+typeid+'">');
+      boardDiv.append(rowDiv);
 
-        <div class="col-lg-2 title-board">
-          <p class="title-text">成語</p>
-          <div class="gift-icon">
-            <img src="img/gift.png" width="55" height="50">
-          </div>
-        </div>
+      var typeDiv = $('<div class="col-lg-2 title-board">');
+      rowDiv.append(typeDiv);
 
-        <div class="col-lg sub-title-board">
-          <div class="task-card" id="subType-LgAfuy">
-            <p class="sub-title-text">描寫人物</p>
-            <p>
-              <div class="line"></div>
-              <span class="sub-title-task">任務</span>
-              <div class="line"></div>
-            </p>
-            <div>
-              <div class="button1 rounded-circle"><span>1</span></div>
-            </div>
-          </div>
+      var typeP = $('<p class="title-text">'+data[typeid]["typeName"]+'</p>');
+      var giftDiv = $('<div class="gift-icon">\n' +
+          '            <img src="img/gift.png" width="55" height="50">\n' +
+          '          </div>');
+      typeDiv.append(typeP);
+      typeDiv.append(giftDiv);
 
-        </div>
-        <div class="col-lg sub-title-board">
-          <div class="task-card" id="subType-dilZf6">
-            <p class="sub-title-text">描寫事務</p>
-            <p>
-              <div class="line"></div>
-              <span class="sub-title-task">任務</span>
-              <div class="line"></div>
-            </p>
-            <div>
-              <div class="button1 rounded-circle">1</div>
-            </div>
-          </div>
+      for (let st in data[typeid]["subTypes"]){
+        var stbDiv = $('<div class="col-lg sub-title-board">');
+        rowDiv.append(stbDiv);
 
-        </div>
-        <div class="col-lg sub-title-board sub-title-end">
-          <div class="task-card" id="subType-UK36MF">
-            <p class="sub-title-text">描寫風景</p>
-            <p>
-              <div class="line"></div>
-              <span class="sub-title-task">任務</span>
-              <div class="line"></div>
-            </p>
-            <div>
-              <div class="button1 rounded-circle">1</div>
-            </div>
-          </div>
-        </div>
+        var taskDiv = $('<div class="task-card" id="'+st+'">');
+        stbDiv.append(taskDiv);
 
-      </div>
+        let subTitleText = $('<p class="sub-title-text">'+data[typeid]["subTypes"][st]["typeName"]+'</p>')
+        taskDiv.append(subTitleText);
+        let lineP = $('<p>\n' +
+            '              <div class="line"></div>\n' +
+            '              <span class="sub-title-task">任務</span>\n' +
+            '              <div class="line"></div>\n' +
+            '            </p>');
+        taskDiv.append(lineP);
 
-      <div class="row sub-board" id="type-s4Fg38" >
-
-        <div class="col-lg-2 title-board">
-          <p class="title-text">字型</p>
-          <div class="gift-icon">
-            <img src="img/gift.png" width="55" height="50">
-          </div>
-        </div>
-
-        <div class="col-lg sub-title-board">
-          <div class="task-card" id="subType-t60oxh">
-            <p class="sub-title-text">音近別字</p>
-            <p>
-              <div class="line"></div>
-              <span class="sub-title-task">任務</span>
-              <div class="line"></div>
-            </p>
-            <div>
-              <div class="button1 rounded-circle"><span>1</span></div>
-            </div>
-          </div>
-
-        </div>
-        <div class="col-lg sub-title-board">
-          <div class="task-card" id="subType-X3rqhz">
-            <p class="sub-title-text">型似別字</p>
-            <p>
-              <div class="line"></div>
-              <span class="sub-title-task">任務</span>
-              <div class="line"></div>
-            </p>
-            <div>
-              <div class="button1 rounded-circle">1</div>
-            </div>
-          </div>
-
-        </div>
-        <div class="col-lg sub-title-board sub-title-end">
-          <div class="task-card" id="subType-8zHrQh">
-            <p class="sub-title-text">部件別字</p>
-            <p>
-              <div class="line"></div>
-              <span class="sub-title-task">任務</span>
-              <div class="line"></div>
-            </p>
-            <div>
-              <div class="button1 rounded-circle">1</div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-  </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-    <script src="data/data.js"></script>
-
-    <script>
-
-      $('.container').on('click','.task-card', function(){
-          let typeId = $(this).closest('.sub-board').attr('id').split('-').pop();
-          let subTypeId = $(this).attr('id').split('-').pop();
-          console.log(typeId, subTypeId);
-          // typeId = 'lidnPO';
-          // subTypeId = 'zGqDtC';
-          window.location.href="zone-answer.html?type="+typeId+"&subtype="+ subTypeId;
-
-
-      });
+        let btnDivs = $('<div></div>');
+        taskDiv.append(btnDivs);
+        for(let m in data[typeid]["subTypes"][st]["mission"]){
+            let btnDiv = $('<div class="button1 rounded-circle"><span>'+m+'</span></div>');
+            if (data[typeid]["subTypes"][st]["mission"][m]["finished"] == 1){
+                btnDiv = $('<div class="button1 rounded-circle missionDone"><span>'+m+'</span></div>');
+            }
+            btnDivs.append(btnDiv);
+        }
+      }
+    }
     </script>
   </body>
 </html>
