--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -553,7 +553,7 @@
 <body>
 
 <div class="return">
-			<a href="start.html"><span > < 返回</span></a>
+      <a href="start.html"><span > < 返回</span></a>
 </div>
 
 <div class="container board">
@@ -760,6 +760,8 @@
     }
 
     // console.log('用户回答：', curQuestion);
+
+    console.log("test 1", quesDict);
 
     console.log("回答：", curQuestion["result"] == 1? "正确":"错误");
 
