--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -640,9 +640,16 @@
 
   console.log(typeID, subTypeID);
 
-  // var quesDict = questionLib[typeID]["subTypes"][subTypeID]["mission"][missionID]["questions"];
+  var quesDict = questionLib[typeID]["subTypes"][subTypeID]["mission"][missionID]["questions"];
 
   /*This is for the cookies. */
+  for (var i = 0; i < quesDict.length; i++){
+    console.log("i", i);
+    if (Cookies.get(i) != null) {
+      console.log("test 2", Cookies.get(i));
+      quesDict[i]["done"] = 1;
+    }
+  }
   if(Cookies.get("quesDict") == null) {
     var quesDict = questionLib[typeID]["subTypes"][subTypeID]["mission"][missionID]["questions"];
     Cookies.set("quesDict", quesDict);
@@ -761,12 +768,9 @@
     }
 
     // console.log('用户回答：', curQuestion);
-
-    console.log("test 1", quesDict);
-    Cookies.set(curQuestion["questionName"], 1);
-    console.log("test 3", Cookies.get(curQuestion["questionName"]));
-    Cookies.set('quesDict', quesDict);
-    console.log("test 4", Cookies.get('quesDict'));
+    // curQuesIndex indices the index of the question.
+    Cookies.set(curQuesIndex, 1);
+    console.log("test 1", Cookies.get(curQuesIndex))
 
     console.log("回答：", curQuestion["result"] == 1? "正确":"错误");
 
