--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -643,12 +643,13 @@
   var quesDict = questionLib[typeID]["subTypes"][subTypeID]["mission"][missionID]["questions"];
 
   /*This is for the cookies. */
+  var pathname = typeID + subtypeID + missionID;
   console.log("test 1", quesDict);
   for (let i in quesDict){
     console.log("i", i);
-    console.log("pathname", window.location.pathname);
-    if (Cookies.get(i, {path: window.location.pathname}) != null) {
-      console.log("test 2", Cookies.get(i, {path: window.location.pathname}));
+    console.log("pathname", pathname);
+    if (Cookies.get(i, {path: pathname}) != null) {
+      console.log("test 2", Cookies.get(i, {path: pathname}));
       quesDict[i]["done"] = 1;
     }
   }
@@ -763,7 +764,7 @@
 
     // console.log('用户回答：', curQuestion);
     // curQuesIndex indices the index of the question.
-    Cookies.set(curQuesIndex, 1, {path: window.location.pathname});
+    Cookies.set(curQuesIndex, 1, {path: pathname});
     console.log("test 1", Cookies.get(curQuesIndex))
 
     console.log("回答：", curQuestion["result"] == 1? "正确":"错误");
