--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -643,7 +643,7 @@
   var quesDict = questionLib[typeID]["subTypes"][subTypeID]["mission"][missionID]["questions"];
 
   /*This is for the cookies. */
-  var pathname = typeID + subtypeID + missionID;
+  var pathname = typeID + subTypeID + missionID;
   console.log("test 1", quesDict);
   for (let i in quesDict){
     console.log("i", i);
