--- a/errCorrect/start.html
+++ b/errCorrect/start.html
@@ -201,6 +201,7 @@
             console.log("mission", typeid, st, m);
             if (Cookies.get(mission) != null) {
               data[typeid]["subTypes"][st]["mission"][m]["finished"] == Cookies.get(mission);
+              console.log("start test", Cookies.get(mission));
             }
 
             if (data[typeid]["subTypes"][st]["mission"][m]["finished"] == 1){
