--- a/errCorrect/start.html
+++ b/errCorrect/start.html
@@ -198,10 +198,10 @@
 
             /* read Cookies */
             var mission = typeid + st + m;
-            console.log("mission", typeid, st, m);
+            // console.log("mission", typeid, st, m);
             if (Cookies.get(mission) != null) {
               data[typeid]["subTypes"][st]["mission"][m]["finished"] = Cookies.get(mission);
-              console.log("start test", Cookies.get(mission));
+              // console.log("start test", Cookies.get(mission));
             }
 
             if (data[typeid]["subTypes"][st]["mission"][m]["finished"] == 1){
