--- a/errCorrect/zone-answer.html
+++ b/errCorrect/zone-answer.html
@@ -640,7 +640,7 @@
 
   console.log(typeID, subTypeID);
 
-  var quesDict = questionLib[typeID]["subTypes"][subTypeID]["mission"][missionID]["questions"];
+  var quesDict = data[typeID]["subTypes"][subTypeID]["mission"][missionID]["questions"];
 
   /*This is for the cookies. */
   var pathname = typeID + subTypeID + missionID;
